--- a/modules-available/main/lang/de/template-tags.json
+++ b/modules-available/main/lang/de/template-tags.json
@@ -19,5 +19,6 @@
     "lang_translations": "\u00dcbersetzungen",
     "lang_vmLocationNotSet": "Es ist noch kein Speicherort f\u00fcr die Virtuellen Maschinen festgelegt.",
     "lang_warning": "Warnung",
+    "lang_warningDebug": "Debugmodus aktiv!",
     "lang_welcome": "Willkommen"
 }
