--- a/modules-available/baseconfig/lang/de/config-variable-categories.json
+++ b/modules-available/baseconfig/lang/de/config-variable-categories.json
@@ -1,9 +1,9 @@
 {
-    "cat_1": "Inaktivit\u00e4t und Abschaltung",
-    "cat_2": "Internetzugriff",
-    "cat_3": "Zeitsynchronisation",
-    "cat_4": "Grundsystem",
     "cat_5": "Gemeinsames Netzlaufwerk",
-    "cat_6": "Unkategorisiert",
-    "cat_7": "vmchooser"
+    "networking": "Netzwerk-\/Internetzugriff",
+    "other": "Unkategorisiert",
+    "power": "Inaktivit\u00e4t und Abschaltung",
+    "sysconfig": "Grundsystem",
+    "timesync": "Zeitsynchronisation",
+    "vmchooser": "vmChooser"
 }
