--- a/modules-available/baseconfig/lang/pt/config-variable-categories.json
+++ b/modules-available/baseconfig/lang/pt/config-variable-categories.json
@@ -1,7 +1,7 @@
 {
-    "cat_1": "Inatividade e Desligamento",
-    "cat_2": "Acesso \u00e0 Internet",
-    "cat_3": "Sincroniza\u00e7\u00e3o de Tempo",
-    "cat_4": "Sistema B\u00e1sico",
-    "cat_7": "vmchooser"
+    "networking": "Acesso \u00e0 Internet",
+    "power": "Inatividade e Desligamento",
+    "sysconfig": "Sistema B\u00e1sico",
+    "timesync": "Sincroniza\u00e7\u00e3o de Tempo",
+    "vmchooser": "vmchooser"
 }
