--- a/modules-available/dozmod/lang/en/messages.json
+++ b/modules-available/dozmod/lang/en/messages.json
@@ -1,4 +1,5 @@
 {
     "delete-images": "Delete: {{0}}",
+    "images-pending-delete-exist": "Images marked for deletion: {{0}}",
     "mail-config-saved": "Mail config saved"
 }
