--- a/modules-available/main/lang/de/template-tags.json
+++ b/modules-available/main/lang/de/template-tags.json
@@ -1,6 +1,5 @@
 {
-    "lang_bootMenuWarning": "Das Bootmen\u00fc ist veraltet oder wurde noch nicht generiert.",
-    "lang_configure": "Konfigurieren",
+    "lang_goTo": "Gehe zu",
     "lang_intro": "Dies ist die bwLehrpool Konfigurationsoberfl\u00e4che.",
     "lang_introGuest": "Dies ist das Administrations-Interface der lokalen bwLehrpool-Installation. Bitte authentifizieren Sie sich, um Einstellungen vorzunehmen.",
     "lang_language": "Sprachen",
@@ -8,16 +7,11 @@
     "lang_loggedInSuffix": " ",
     "lang_login": "Anmelden",
     "lang_logout": "Abmelden",
-    "lang_minilinuxMissing": "Wichtige Dateien der MiniLinux-Installation fehlen.",
     "lang_needsSetup": "Einrichtung unvollst\u00e4ndig",
     "lang_noExistingAccount": "Es existiert noch kein Administrator-Zugang f\u00fcr diesen Satelliten-Server.",
-    "lang_numerOfImagesMarkedForDeletion": "Zur L\u00f6schung markierte Abbilder",
     "lang_register": "Registrieren",
-    "lang_systemConfiguration": "Systemkonfiguration",
-    "lang_systemConfigurationNotChosen": "Es wurde noch keine Systemkonfiguration ausgew\u00e4hlt.",
     "lang_toggleNavigation": "Navigation ein\/ausblenden",
     "lang_translations": "\u00dcbersetzungen",
-    "lang_vmLocationNotSet": "Es ist noch kein Speicherort f\u00fcr die Virtuellen Maschinen festgelegt.",
     "lang_warning": "Warnung",
     "lang_warningDebug": "Debugmodus aktiv!",
     "lang_welcome": "Willkommen"
