--- a/modules-available/main/lang/en/global-tags.json
+++ b/modules-available/main/lang/en/global-tags.json
@@ -2,8 +2,10 @@
     "lang_back": "Back",
     "lang_cancel": "Cancel",
     "lang_close": "Close",
+    "lang_days": "day(s)",
     "lang_delete": "Delete",
     "lang_hint": "Hint",
+    "lang_hours": "hour(s)",
     "lang_next": "Next",
     "lang_save": "Save",
     "lang_today": "Today",
