--- a/modules-available/main/lang/en/template-tags.json
+++ b/modules-available/main/lang/en/template-tags.json
@@ -1,6 +1,5 @@
 {
-    "lang_bootMenuWarning": "The boot menu is outdated or has not been generated.",
-    "lang_configure": "Configure",
+    "lang_goTo": "Gehe zu",
     "lang_intro": "This is the bwLehrpool configuration interface.",
     "lang_introGuest": "This is the administration interface of the local bwLehrpool intallation. Please authenticate yourself to adjust settings.",
     "lang_language": "Language",
@@ -8,16 +7,11 @@
     "lang_loggedInSuffix": " ",
     "lang_login": "Login",
     "lang_logout": "Logout",
-    "lang_minilinuxMissing": "Important files from the mini Linux installation are missing.",
     "lang_needsSetup": "Setup incomplete",
     "lang_noExistingAccount": "No account has been created yet. Sign up to become the administrator.",
-    "lang_numerOfImagesMarkedForDeletion": "Images marked for deletion",
     "lang_register": "Register",
-    "lang_systemConfiguration": "System Configuration",
-    "lang_systemConfigurationNotChosen": "A system configuration has not been chosen yet.",
     "lang_toggleNavigation": "toggle navigation",
     "lang_translations": "Translations",
-    "lang_vmLocationNotSet": "A location for the virtual machine is not set yet.",
     "lang_warning": "Warning",
     "lang_warningDebug": "Debug mode active!",
     "lang_welcome": "Welcome"
