--- a/modules-available/sysconfig/lang/de/messages.json
+++ b/modules-available/sysconfig/lang/de/messages.json
@@ -1,20 +1,21 @@
 {
-    "invalid-action": "Ung\u00fcltige Aktion: {{0}}",
-    "missing-title": "Kein Titel eingegeben",
-    "module-edited": "Modul wurde aktualisiert",
-    "module-added": "Modul erfolgreich hinzugef\u00fcgt",
-    "replacing-config": "Ersetzen von Konfiguration {{0}}",
-    "missing-file": "Es wurde keine Datei ausgew\u00e4hlt!",
-    "unsuccessful-action": "Nicht erfolgreich",
-    "upload-failed": "Upload schlug fehl: {{0}}",
-    "remote-timeout": "Konnte Ressource {{0}} nicht herunterladen ({{1}})",
-    "no-image": "Unter der angegebenen URL konnte kein SVG-Bild gefunden werden",
-    "replacing-module": "Ersetzen von Modul {{0}}",
-    "config-invalid": "Konfiguration mit ID {{0}} existiert nicht",
     "config-activated": "Konfiguration {{0}} wurde aktiviert",
-    "module-rebuilt": "Modul wurde neu generiert",
+    "config-invalid": "Konfiguration mit ID {{0}} existiert nicht",
+    "invalid-action": "Ung\u00fcltige Aktion: {{0}}",
+    "missing-file": "Es wurde keine Datei ausgew\u00e4hlt!",
+    "missing-title": "Kein Titel eingegeben",
+    "module-added": "Modul erfolgreich hinzugef\u00fcgt",
+    "module-deleted": "Modul {{0}} wurde gel\u00f6scht",
+    "module-edited": "Modul wurde aktualisiert",
+    "module-in-use": "Modul {{0}} wird noch durch Konfiguration {{1}} verwendet",
     "module-rebuild-failed": "Neubau des Moduls fehlgeschlagen",
     "module-rebuilding": "Modul wird neu generiert",
-    "module-in-use": "Modul {{0}} wird noch durch Konfiguration {{1}} verwendet",
-    "module-deleted": "Modul {{0}} wurde gel\u00f6scht"
+    "module-rebuilt": "Modul wurde neu generiert",
+    "no-image": "Unter der angegebenen URL konnte kein SVG-Bild gefunden werden",
+    "no-noconfig-active": "Es wurde noch keine Systemkonfiguration ausgew\u00e4hlt.",
+    "remote-timeout": "Konnte Ressource {{0}} nicht herunterladen ({{1}})",
+    "replacing-config": "Ersetzen von Konfiguration {{0}}",
+    "replacing-module": "Ersetzen von Modul {{0}}",
+    "unsuccessful-action": "Nicht erfolgreich",
+    "upload-failed": "Upload schlug fehl: {{0}}"
 }
