--- a/modules-available/main/lang/de/global-tags.json
+++ b/modules-available/main/lang/de/global-tags.json
@@ -2,8 +2,10 @@
     "lang_back": "Zur\u00fcck",
     "lang_cancel": "Abbrechen",
     "lang_close": "Schlie\u00dfen",
+    "lang_days": "Tag(e)",
     "lang_delete": "L\u00f6schen",
     "lang_hint": "Hinweis",
+    "lang_hours": "Stunde(n)",
     "lang_next": "Weiter",
     "lang_save": "Speichern",
     "lang_today": "Heute",
