work work work work work

--- a/modules-available/baseconfig/lang/de/template-tags.json
+++ b/modules-available/baseconfig/lang/de/template-tags.json
@@ -1,6 +1,5 @@
 {
     "lang_basicConfiguration": "Basiskonfiguration",
     "lang_clientRelatedConfig": "Die Optionen auf dieser Seite beziehen sich auf das Verhalten der bwLehrpool-Clients.",
-    "lang_enableOverride": "\u00dcberschreiben",
-    "lang_reset": "Zur\u00fccksetzen"
+    "lang_enableOverride": "\u00dcberschreiben"
 }
