--- a/modules-available/main/lang/en/categories.json
+++ b/modules-available/main/lang/en/categories.json
@@ -1,6 +1,7 @@
 {
-	"settings": "Settings",
-	"status": "Status",
-	"content": "Content",
-	"users": "Users"
+    "content": "Content",
+    "settings-client": "Settings (Client)",
+    "settings-server": "Settings (Server)",
+    "status": "Status",
+    "users": "Users"
 }
