--- a/modules-available/translation/lang/en/template-tags.json
+++ b/modules-available/translation/lang/en/template-tags.json
@@ -1,16 +1,7 @@
 {
-    "lang_adminInfo": "This is a list of all templates. The \"status\"-column tells if there are translations missing, or unused tags are defined.",
-    "lang_createTag": "Create TAG",
-    "lang_editConfigModule": "Edit config module strings",
-    "lang_editHardcoded": "Edit hardcoded strings",
-    "lang_editMessages": "Edit Messages",
-    "lang_editModules": "Edit Module Translations",
-    "lang_editSettings": "Edit configuration variables related strings",
-    "lang_editTemplates": "Edit template strings",
+    "lang_createTag": "Create Tag",
     "lang_global": "Global",
     "lang_globalTooltip": "This tag is global; usually there is no need to translate it explicitly for this module",
-    "lang_langAdministration": "Templates",
-    "lang_mainHeading": "Translation management",
     "lang_messages": "Messages",
     "lang_missing": "Missing",
     "lang_module": "Module",
