--- a/modules-available/baseconfig_partitions_cdn/lang/pt/template-tags.json
+++ b/modules-available/baseconfig_partitions_cdn/lang/pt/template-tags.json
@@ -1,7 +1,4 @@
 {
-    "lang_basicConfiguration": "Configura\u00e7\u00e3o B\u00e1sica",
-    "lang_catPartition": "Gerenciamento de Parti\u00e7\u00f5es",
-    "lang_catUser": "Gerenciamente de Usu\u00e1rios",
     "lang_confirm": "Voc\u00ea deseja salvar configura\u00e7\u00f5es em [ \/srv\/openslx\/www\/boot\/default\/config ] ?",
     "lang_create": "Criar",
     "lang_helpId": "Id da parti\u00e7\u00e3o",
@@ -9,13 +6,11 @@
     "lang_helpOptions": "Atualmente, apenas a op\u00e7\u00e3o 'bootable' est\u00e1 dispon\u00edvel",
     "lang_helpSize": "Precisa estar em Gigabytes, por exemplo 15G",
     "lang_newPartition": "Nova Parti\u00e7\u00e3o",
-    "lang_newUser": "Novo Usu\u00e1rio",
     "lang_partitionId": "Id",
+    "lang_partitionManagement": "Gerenciamento de Parti\u00e7\u00f5es",
     "lang_partitionMountPoint": "Mount Point",
     "lang_partitionOptions": "Op\u00e7\u00f5es",
     "lang_partitionSize": "Tamanho",
     "lang_resetConfirm": "Voc\u00ea realmente deseja restaurar as vari\u00e1veis para seus valores padr\u00f5es?",
-    "lang_resetDefault": "Restaurar Padr\u00e3o",
-    "lang_userName": "Nome",
-    "lang_userPasswd": "Senha"
+    "lang_resetDefault": "Restaurar Padr\u00e3o"
 }
