--- a/modules-available/main/lang/de/global-tags.json
+++ b/modules-available/main/lang/de/global-tags.json
@@ -4,9 +4,11 @@
     "lang_close": "Schlie\u00dfen",
     "lang_days": "Tag(e)",
     "lang_delete": "L\u00f6schen",
+    "lang_edit": "Bearbeiten",
     "lang_hint": "Hinweis",
     "lang_hours": "Stunde(n)",
     "lang_next": "Weiter",
+    "lang_reset": "Zur\u00fccksetzen",
     "lang_save": "Speichern",
     "lang_today": "Heute",
     "lang_yesterday": "Gestern"
