--- a/modules-available/serversetup-bwlp/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/en/template-tags.json
@@ -7,18 +7,10 @@
     "lang_bootMenu": "Boot Menu",
     "lang_bootMenuCreate": "Create Boot Menu",
     "lang_chooseIP": "Please select the IP address that the client server will use to boot.",
-    "lang_compile": "Compile",
-    "lang_compilingIpxe": "Compiling iPXE",
     "lang_customEntry": "Custom entry",
-    "lang_customScript": "Custom script",
-    "lang_download": "Download",
     "lang_downloadImage": "Download USB image",
     "lang_example": "Example",
-    "lang_extension": "Extension",
     "lang_generationFailed": "Could not generate boot menu. The bwLehrpool-System might not work properly. If you can't fix the problem, please report the error message above to the bwLehrpool project.",
-    "lang_ipxeInfo": "Here it is possible to compile iPXE using a custom script.",
-    "lang_ipxeWarning": "If this is your first time compiling, it may take 1 to 4 minutes to finish.",
-    "lang_loading": "Loading",
     "lang_localHDD": "Local HDD",
     "lang_masterPassword": "Master password",
     "lang_masterPasswordHelp": "The master password is required to edit a boot menu entry. This should be set for security reasons.",
@@ -28,10 +20,6 @@
     "lang_menuCustomHint3": "and select as the default boot behavior custom as well.",
     "lang_menuDisplayTime": "Menu Display Time",
     "lang_menuGeneration": "Generating boot menu...",
-    "lang_mountIpxe": "Mount iPXE",
-    "lang_restoreDefault": "Restore Default",
-    "lang_saveScript": "Save Script",
     "lang_seconds": "Seconds",
-    "lang_set": "Set",
-    "lang_success": "Successfully create file:"
+    "lang_set": "Set"
 }
