--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -6,6 +6,7 @@
     "lang_cpuCores": "CPU-Kerne",
     "lang_cpuModel": "CPU",
     "lang_details": "Details",
+    "lang_devices": "Ger\u00e4te",
     "lang_event": "Ereignis",
     "lang_firstSeen": "Erste Aktivit\u00e4t",
     "lang_gbRam": "RAM",
