--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -6,6 +6,7 @@
     "lang_cpuCores": "CPU cores",
     "lang_cpuModel": "CPU",
     "lang_details": "Details",
+    "lang_devices": "Devices",
     "lang_event": "Event",
     "lang_firstSeen": "First seen",
     "lang_gbRam": "RAM",
