--- a/modules-available/baseconfig/lang/de/template-tags.json
+++ b/modules-available/baseconfig/lang/de/template-tags.json
@@ -1,5 +1,7 @@
 {
     "lang_basicConfiguration": "Basiskonfiguration",
     "lang_clientRelatedConfig": "Die Optionen auf dieser Seite beziehen sich auf das Verhalten der bwLehrpool-Clients.",
-    "lang_enableOverride": "\u00dcberschreiben"
+    "lang_editOverrideNotice": "Sie bearbeiten die Einstellungen f\u00fcr einen Unterbereich",
+    "lang_enableOverride": "\u00dcberschreiben",
+    "lang_settingActive": "Einstellung aktiv"
 }
