[translation] Make menu categories a global section instead of a hook in main

--- a/modules-available/translation/lang/de/template-tags.json
+++ b/modules-available/translation/lang/de/template-tags.json
@@ -2,6 +2,7 @@
     "lang_createTag": "Tag erstellen",
     "lang_global": "Global",
     "lang_globalTooltip": "Dieser Tag ist global verf\u00fcgbar und braucht normalerweise nicht explizit f\u00fcr dieses Modul \u00fcbersetzt zu werden",
+    "lang_menuCategories": "Men\u00fckategorien",
     "lang_messages": "Benachrichtigungen",
     "lang_missing": "Fehlend",
     "lang_module": "Modul",
