--- a/modules-available/exams/lang/de/template-tags.json
+++ b/modules-available/exams/lang/de/template-tags.json
@@ -1,16 +1,18 @@
 {
-    "lang_addExam": "Klausurzeitraum hinzufügen",
-    "lang_allExamPeriods": "Alle Klausurzeiträume",
-    "lang_deleteConfirmation": "Wirklich löschen?",
-    "lang_id" : "ID",
-    "lang_locations" : "Räume/Orte",
-    "lang_begin" : "Beginn",
-    "lang_end" : "Ende",
-    "lang_actions" : "Aktionen",
-    "lang_location" : "Raum/Ort",
-    "lang_begin_date" : "Beginn Datum",
-    "lang_begin_time" : "Uhrzeit",
-    "lang_end_date" : "Ende Datum",
-    "lang_end_time" : "Uhrzeit",
-    "lang_description" : "Beschreibung"
+    "lang_actions": "Aktionen",
+    "lang_addExam": "Klausurzeitraum hinzuf\u00fcgen",
+    "lang_allExamPeriods": "Alle Klausurzeitr\u00e4ume",
+    "lang_begin": "Beginn",
+    "lang_begin_date": "Beginn Datum",
+    "lang_begin_time": "Uhrzeit",
+    "lang_deleteConfirmation": "Wirklich l\u00f6schen?",
+    "lang_description": "Beschreibung",
+    "lang_editExam": "Klausurzeitraum bearbeiten",
+    "lang_end": "Ende",
+    "lang_end_date": "Ende Datum",
+    "lang_end_time": "Uhrzeit",
+    "lang_id": "ID",
+    "lang_location": "Raum\/Ort",
+    "lang_locations": "R\u00e4ume\/Orte",
+    "lang_saveExam": "Klausurzeitraum speichern"
 }
