Added a localized version of momentjs.

--- a/modules-available/exams/lang/en/template-tags.json
+++ b/modules-available/exams/lang/en/template-tags.json
@@ -1,16 +1,18 @@
 {
+    "lang_actions": "Actions",
     "lang_addExam": "Add exam period",
     "lang_allExamPeriods": "All exam periods",
+    "lang_begin": "Begin",
+    "lang_begin_date": "Begin Date",
+    "lang_begin_time": "Time",
     "lang_deleteConfirmation": "Are you sure?",
-    "lang_id" : "ID",
-    "lang_locations" : "Rooms/Locations",
-    "lang_begin" : "Begin",
-    "lang_end" : "End",
-    "lang_actions" : "Actions",
-    "lang_location" : "Room/Location",
-    "lang_begin_date" : "Begin Date",
-    "lang_begin_time" : "Time",
-    "lang_end_date" : "End Date",
-    "lang_end_time" : "Time",
-    "lang_description" : "Description"
+    "lang_description": "Description",
+    "lang_editExam": "Edit Exam Period",
+    "lang_end": "End",
+    "lang_end_date": "End Date",
+    "lang_end_time": "Time",
+    "lang_id": "ID",
+    "lang_location": "Room\/Location",
+    "lang_locations": "Rooms\/Locations",
+    "lang_saveExam": "Save Exam Period"
 }
