--- a/modules-available/locations/lang/de/template-tags.json
+++ b/modules-available/locations/lang/de/template-tags.json
@@ -6,7 +6,7 @@
     "lang_deleteChildLocations": "Untergeordnete Orte ebenfalls l\u00f6schen",
     "lang_deleteLocation": "Ort l\u00f6schen",
     "lang_deleteSubnet": "Bereich l\u00f6schen",
-    "lang_editConfigVariables": "Konfiguration anpassen",
+    "lang_editConfigVariables": "Konfig.-Variablen",
     "lang_endAddress": "Endadresse",
     "lang_listOfSubnets": "Liste der Subnetze",
     "lang_location": "Ort",
@@ -16,13 +16,16 @@
     "lang_locationSelfOverlap": "Folgender Ort hat mehrere sich \u00fcberschneidende Netzbereiche",
     "lang_locationSettings": "Raum\/Ort bearbeiten",
     "lang_locationsMainHeading": "Verwaltung von R\u00e4umen\/Orten",
+    "lang_machineCount": "Rechner",
     "lang_matchingMachines": "Enthaltene Rechner",
     "lang_name": "Name",
     "lang_noParent": "Kein \u00fcbergeordneter Ort",
+    "lang_overrideCount": "Angepasst",
     "lang_parentLocation": "\u00dcbergeordneter Ort",
     "lang_referencingLectures": "Veranstaltungen",
     "lang_startAddress": "Startadresse",
     "lang_subnet": "IP-Bereich",
+    "lang_sysConfig": "Lokalisierung",
     "lang_thisListByLocation": "Zur Ortsansicht",
     "lang_thisListBySubnet": "Nach Subnetzen auflisten",
     "lang_unassignedMachines": "Rechner, die in keinen definierten Ort fallen"
