--- a/modules-available/locations/lang/en/template-tags.json
+++ b/modules-available/locations/lang/en/template-tags.json
@@ -6,7 +6,7 @@
     "lang_deleteChildLocations": "Delete child locations aswell",
     "lang_deleteLocation": "Delete location",
     "lang_deleteSubnet": "Delete range",
-    "lang_editConfigVariables": "Edit config variables",
+    "lang_editConfigVariables": "Config vars",
     "lang_endAddress": "End address",
     "lang_listOfSubnets": "List of subnets",
     "lang_location": "Ort",
@@ -16,13 +16,16 @@
     "lang_locationSelfOverlap": "The following location has multiple address ranges that are overlapping",
     "lang_locationSettings": "Edit this room or location",
     "lang_locationsMainHeading": "Manage rooms and locations",
+    "lang_machineCount": "Clients",
     "lang_matchingMachines": "Matching clients",
     "lang_name": "Name",
     "lang_noParent": "No parent",
+    "lang_overrideCount": "Overridden",
     "lang_parentLocation": "Parent location",
     "lang_referencingLectures": "Assigned Lectures",
     "lang_startAddress": "Start address",
     "lang_subnet": "IP range",
+    "lang_sysConfig": "Localization\/Integration",
     "lang_thisListByLocation": "List by location",
     "lang_thisListBySubnet": "List by subnet",
     "lang_unassignedMachines": "Machines not matching any location"
