--- a/modules-available/sysconfig/lang/de/template-tags.json
+++ b/modules-available/sysconfig/lang/de/template-tags.json
@@ -18,6 +18,7 @@
     "lang_browseForFile": "Durchsuchen",
     "lang_checkFileContent": "Hier haben Sie die M\u00f6glichkeit, den Inhalt des Archivs noch einmal zu \u00fcberpr\u00fcfen.",
     "lang_computerLoad": "Bild von lokalem Rechner hochladen",
+    "lang_configLocationLong": "Diese Konfiguration ist einem oder mehreren Orten direkt zugewiesen. Es werden nur direkt betroffene R\u00e4ume ber\u00fccksichtigt.",
     "lang_configuration": "Konfiguration",
     "lang_configurationActive": "Konfiguration aktivieren",
     "lang_configurationChoose": "Bitte w\u00e4hlen Sie, welche Module f\u00fcr diese Konfiguration verwendet werden sollen.",
@@ -33,6 +34,7 @@
     "lang_download": "Herunterladen",
     "lang_downloadLong": "Dieses Modul \"so wie es ist\" herunterladen.",
     "lang_editLong": "Modul oder Konfiguration bearbeiten.",
+    "lang_editingLocationInfo": "Sie bearbeiten die Konfiguration eines bestimmten Raums\/Orts, nicht die globale Konfiguration",
     "lang_folderRedirection": "Folder Redirection",
     "lang_generateModule": "Modul erzeugen",
     "lang_handlingNotes": "Hier k\u00f6nnen Sie festlegen, wie Netzwerk-Shares (inkl. des Home-Verzeichnisses) an Virtuelle Maschinen durchgereicht werden. In \u00e4lteren Versionen von bwLehrpool wurden die VMware Shared Folders genutzt, was mit bestimmten file servern Probleme verursachen konnte. Der neue native Modus funktioniert deutlich besser, ist aber bei Windows-G\u00e4sten darauf angewiesen, dass (1) der file server smb\/cifs spricht (z.B. Windows Server, Samba unter Linux) und (2) die openslx.exe im Autostart eingebunden ist (bei den bwLehrpool Vorlagen bereits der Fall). Der native Modus mit Fallback auf VMware ist experimentell und kann dazu f\u00fchren, dass die VM in regelm\u00e4\u00dfigen Abst\u00e4nden H\u00e4nger hat. WICHTIG: Bitte w\u00e4hlen Sie einen Laufwerksbuchstaben, der in den eingesetzten VMs verf\u00fcgbar ist, da ansonsten auf einen anderen Buchstaben ausgewichen werden muss.",
