--- a/modules-available/locations/lang/en/messages.json
+++ b/modules-available/locations/lang/en/messages.json
@@ -1,9 +1,10 @@
 {
     "added-x-entries": "Entries added: {{0}}",
-    "parameter-missing": "Missing parameter: {{0}}",
+    "invalid-location-id": "Invalid location id: {{0}}",
     "location-deleted": "Location has been deleted (locations: {{0}}, subnets: {{1}})",
     "location-updated": "Location {{0}} has been updated",
+    "parameter-missing": "Missing parameter: {{0}}",
+    "subnets-created": "{{0}} subnet(s) created",
     "subnets-deleted": "{{0}} subnet(s) deleted",
-    "subnets-updated": "{{0}} subnet(s) updated",
-    "subnets-created": "{{0}} subnet(s) created"
+    "subnets-updated": "{{0}} subnet(s) updated"
 }
