[exams] Unify add/edit templates, add error messages, limit zoom range some more

--- a/modules-available/exams/lang/de/messages.json
+++ b/modules-available/exams/lang/de/messages.json
@@ -4,5 +4,6 @@
     "exam-added-success": "Klausurzeitraum erfolgreich hinzugef\u00fcgt",
     "exam-deleted-success": "Klausurzeitraum erfolgreich gel\u00f6scht",
     "exam-not-added": "Klausurzeitraum konnte nicht hinzugef\u00fcgt werden",
-    "exam-not-deleted-error": "Klausurzeitraum konnte nicht gel\u00f6scht werden"
+    "exam-not-deleted-error": "Klausurzeitraum konnte nicht gel\u00f6scht werden",
+    "invalid-exam-id": "Ung\u00fcltige Klausur-ID: {{0}}"
 }
