--- a/modules-available/exams/lang/de/template-tags.json
+++ b/modules-available/exams/lang/de/template-tags.json
@@ -14,5 +14,6 @@
     "lang_id": "ID",
     "lang_location": "Raum\/Ort",
     "lang_locations": "R\u00e4ume\/Orte",
+    "lang_pleaseSelectLocation": "Bitte w\u00e4hlen Sie mindestens einen Raum\/Ort",
     "lang_saveExam": "Klausurzeitraum speichern"
 }
