--- a/modules-available/exams/lang/en/messages.json
+++ b/modules-available/exams/lang/en/messages.json
@@ -1,6 +1,9 @@
 {
+    "changes-successfully-saved": "Changes successfully saved",
+    "error-while-saving-changes": "Error saving changes",
     "exam-added-success": "Exam period successfully added",
     "exam-deleted-success": "Exam period successfully deleted",
     "exam-not-added": "Exam period was not added",
-    "exam-not-deleted-error": "Exam period was not deleted"
+    "exam-not-deleted-error": "Exam period was not deleted",
+    "invalid-exam-id": "Invalid exam id: {{0}}"
 }
